# Konnichiwa

./: .gitignore  Dockerfile  README.md  ecs-task-definition.json  notes.md  pyproject.toml
.github/workflows/: deploy.yml  ecs-task-definition.json
app/: Dockerfile  pyproject.toml
app/src/api/: format_bytes_test.py  main.py
aws/: ecr.tf  ecs-task-definition.json  ecs.tf  secrets.tf  terraform.tfstate  variables.tf  vpc.tf
aws-initial-setup/: cloudwatch.tf  ecs.tf  main.tf  secrets.tf  terraform.tfstate  variables.tf
loadtest/: locustfile.py  pyproject.toml
monitor/: monitor.py  monitor.sh  pyproject.toml
src/api/: format_bytes.py
